add Google Cloud Module

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':javajokeprovider', ':androidjokedisplayer'
+include ':app', ':javajokeprovider', ':androidjokedisplayer', ':backend'
