--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,10 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.0.2'
-    compile 'com.google.android.gms:play-services-ads:9.8.0'
     compile project(':javajokeprovider')
     compile project(':androidjokedisplayer')
+    compile 'com.android.support:appcompat-v7:25.0.2'
+    compile 'com.google.android.gms:play-services-ads:9.8.0'
+    compile 'com.google.code.findbugs:jsr305:2.0.1'
+    compile project(path: ':backend', configuration: 'android-endpoints')
 }
