--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     compile 'com.google.android.gms:play-services-ads:9.8.0'
     compile 'com.google.code.findbugs:jsr305:2.0.1'
     compile project(path: ':backend', configuration: 'android-endpoints')
+    compile group: 'com.google.http-client', name: 'google-http-client-android', version: '1.12.0-beta'
+    compile group: 'com.google.api-client', name: 'google-api-client', version: '1.19.1'
 }
