--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,16 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'gradleproject'
+            keyPassword 'password'
+            storeFile file('/home/lara/Desktop/signingDemo/gradlekeystore.jks')
+            storePassword 'password'
+        }
+    }
     compileSdkVersion 25
     buildToolsVersion '25.0.2'
-
     defaultConfig {
         applicationId "com.udacity.gradle.builditbigger"
         minSdkVersion 16
@@ -16,6 +23,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
     }
     productFlavors {
@@ -31,15 +39,15 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile project(':androidjokedisplayer')
     compile 'com.android.support:appcompat-v7:25.0.2'
-    compile 'com.google.android.gms:play-services-ads:9.8.0'
+    freeCompile 'com.google.android.gms:play-services-ads:9.8.0'
     compile 'com.google.code.findbugs:jsr305:2.0.1'
     compile project(path: ':backend', configuration: 'android-endpoints')
-    compile group: 'com.google.http-client', name: 'google-http-client-android', version: '1.12.0-beta'
-    compile group: 'com.google.api-client', name: 'google-api-client', version: '1.19.1'
+    compile 'com.google.http-client:google-http-client-android:1.12.0-beta'
+    compile 'com.google.api-client:google-api-client:1.19.1'
 }
